# unicode_data

./: CMakeLists.txt  README.md
cmake/: pkg-config.pc.in
include/: unicode_data.h
include/unicode_data/: unicode_data.h
src/: unicode_data.cpp  unicode_data_00_exists.cpp  unicode_data_01_name.cpp  unicode_data_02_category.cpp  unicode_data_03_combine.cpp  unicode_data_04_bidi.cpp  unicode_data_05_decomposition.cpp  unicode_data_06_decimal.cpp  unicode_data_07_digit.cpp  unicode_data_08_numeric.cpp  unicode_data_09_mirror.cpp  unicode_data_10_old_name.cpp  unicode_data_11_comment.cpp  unicode_data_12_upper.cpp  unicode_data_13_lower.cpp  unicode_data_14_title.cpp  unicode_data_99.cpp
